GENTBE-2744: Fixed openings hours in footer wrap over 2 lines instead of 1.

--- a/sass/components/_island.scss
+++ b/sass/components/_island.scss
@@ -190,7 +190,7 @@
 
   p,
   ul {
-    font-size: 95%;
+    font-size: 90%;
     line-height: 1.4em;
     margin: 0;
   }
